--- a/public/index.html
+++ b/public/index.html
@@ -6,98 +6,21 @@
   <title>Chatroom</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    /* Color Palette: Green, Gray, Black, White */
     :root {
-      --green-primary: #2d8659;
-      --green-light: #4CAF50;
-      --green-dark: #1e5c3f;
-      --gray-light: #f5f7fa;
-      --gray-medium: #6c757d;
-      --gray-dark: #495057;
-      --black: #212529;
-      --white: #ffffff;
+      --bs-success: #2d8659;
+      --bs-success-rgb: 45, 134, 89;
     }
-
     body {
       background: linear-gradient(135deg, #e8f5e9 0%, #f1f8f4 100%);
       min-height: 100vh;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
     }
-
-    .card {
-      border-radius: 12px;
-      border: 1px solid rgba(45, 134, 89, 0.1);
-      box-shadow: 0 4px 20px rgba(45, 134, 89, 0.1);
-    }
-
-    .card-title {
-      color: var(--green-dark);
-      text-align: center;
-      font-weight: 600;
-    }
-
-    h1, h2 {
-      color: var(--green-dark);
-      text-align: center;
-    }
-
     .btn-primary {
-      background-color: var(--green-primary);
-      border-color: var(--green-primary);
-      color: var(--white);
+      background-color: #2d8659;
+      border-color: #2d8659;
     }
-
     .btn-primary:hover {
-      background-color: var(--green-dark);
-      border-color: var(--green-dark);
-    }
-
-    .btn-secondary {
-      background-color: var(--gray-medium);
-      border-color: var(--gray-medium);
-      color: var(--white);
-    }
-
-    .btn-secondary:hover {
-      background-color: var(--gray-dark);
-      border-color: var(--gray-dark);
-    }
-
-    .form-control:focus {
-      border-color: var(--green-primary);
-      box-shadow: 0 0 0 0.2rem rgba(45, 134, 89, 0.25);
-    }
-
-    .alert-success {
-      background-color: #d4edda;
-      border-color: #c3e6cb;
-      color: #155724;
-    }
-
-    .alert-danger {
-      background-color: #f8d7da;
-      border-color: #f5c6cb;
-      color: #721c24;
-    }
-
-    .alert-warning {
-      background-color: #fff3cd;
-      border-color: #ffeaa7;
-      color: #856404;
-    }
-
-    .alert-info {
-      background-color: #d1ecf1;
-      border-color: #bee5eb;
-      color: #0c5460;
-    }
-
-    a {
-      color: var(--green-primary);
-    }
-
-    a:hover {
-      color: var(--green-dark);
+      background-color: #1e5c3f;
+      border-color: #1e5c3f;
     }
   </style>
 </head>
